First draft of the sound match game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Practice"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_practice"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
+        <activity
+            android:name=".soundmatch"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_soundmatch"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
 
 </manifest>
