--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/HeartBeatTheme"
+        android:label="@string/app_name">
         <activity
             android:name=".Mainpage"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,17 +21,14 @@
         </activity>
         <activity
             android:name=".LearnHomeActivity"
-            android:theme="@style/AppTheme" >
             android:label="@string/title_activity_learn_home" >
         </activity>
         <activity
             android:name=".LearnActivityBasics"
-            android:theme="@style/AppTheme" >
             android:label="@string/title_activity_learn_activity_basics" >
         </activity>
         <activity
             android:name=".LearnActivityMurmurs"
-            android:theme="@style/AppTheme" >
             android:label="@string/title_activity_learn_activity_murmurs" >
         </activity>
         <activity
