--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:screenOrientation="portrait"
+        android:name="MyApplication"
+        android:theme="@style/AppTheme">
+
+
         <activity
             android:name=".Mainpage"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +31,9 @@
         </activity>
         <activity
             android:name=".Game1"
-            android:label="@string/title_activity_game1" >
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/title_activity_game1"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
