--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,12 @@
     package="com.example.admin.heartbeat" >
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:name="MyApplication"
-        android:theme="@style/AppTheme">
-
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".Mainpage"
             android:configChanges="orientation|keyboardHidden"
@@ -25,15 +23,19 @@
         </activity>
         <activity
             android:name=".Practice"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_practice"
-            android:theme="@style/FullscreenTheme" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".Game1"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_game1"
             android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".Listeningtips"
+            android:label="@string/title_activity_listeningtips" >
         </activity>
     </application>
 
