--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,14 @@
             android:name=".LearnActivityMitralRegurgitation"
             android:label="@string/title_activity_learn_activity_mitral_regurgitation" >
         </activity>
+        <activity
+            android:name=".util.TestFragmentActivity"
+            android:label="@string/title_activity_test_fragment" >
+        </activity>
+        <activity
+            android:name=".util.TestActivity"
+            android:label="@string/title_activity_test" >
+        </activity>
     </application>
 
 </manifest>
