--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.admin.heartbeat" >
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -74,11 +75,21 @@
         </activity>
         <activity
             android:name=".Game1"
-            android:label="@string/title_activity_game1" >
+            android:label="@string/title_activity_game1"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".Practice"
-            android:label="@string/title_activity_practice" >
+            android:label="@string/title_activity_practice"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".Listeningtips"
+            android:label="@string/title_activity_listeningtips" >
+        </activity>
+        <activity
+            android:name=".LearnActivityAllSounds"
+            android:label="@string/title_activity_learn_activity_all_sounds" >
         </activity>
     </application>
 
